--- a/config/V4/style.css
+++ b/config/V4/style.css
@@ -32,63 +32,59 @@ window#waybar.empty #window{
 
 #waybar > box {
     border-radius: 8px;
-    margin: 0px 8px 4px 8px;
+    margin: 1px 4px 4px 4px;
     background-color: @background;
-    box-shadow: 1px 1px 3px 1px #101010;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 1);
     transition-property: background-color;
     transition-duration: .5s;
 }
 
 
-.modules-left {
-  margin-left: 2px;
-}
+
 
 .modules-right {
-  margin-right: 8px;
-  margin: 2px;
-  padding: 2px;
+  margin: 4px 4px;
   border-radius: 8px;
   border: 2px solid @foreground;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .modules-center {
-  margin: 2px;
+  margin: 4px 0px;
   padding: 2px;
   border-radius: 8px;
   border: 2px solid @foreground;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
-#custom-omarchy {
-  padding-left: 2px;
-  padding-right: 2px;
-  font-size: 16px;
-}
+
 
 #window {
-  margin: 2px;
-  padding: 2px;
+  margin: 4px 0px;
+  padding: 0 2px;
   border-radius: 8px;
   border: 2px solid @foreground;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 #workspaces {
-    margin: 2px; 
-    padding: 2px 0px;
+    margin: 4px 4px 4px 4px;
+    padding: 1px 0px 1px;
     border-radius: 10px;
     background-color: @foreground;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     opacity: 0.95;
 }
 
 #workspaces button {
-    padding: 0px 10px;
-    margin: 0px 2px;
+    padding: 0px 10px 0px;
+    margin: 1px 2px 1px 2px;
     border-radius: 8px;
     background-color: @background;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     color: @foreground;
     transition: all 0.3s ease-in-out;
     opacity: 0.6;
-    font-size: 8px;
 }
 
 #workspaces button.active {
@@ -123,11 +119,15 @@ window#waybar.empty #window{
 #pulseaudio,
 #custom-omarchy,
 #backlight,
+#clock,
+#idle_inhibitor,
 #custom-updatespacman,
 #custom-screenrecording-indicator,
 #custom-update {
   min-width: 14px;
-  margin: 0 5.5px;
+  margin: 0 2px 0 2px;
+  padding-left: 3px;
+  padding-right: 3px;
 }
 
 tooltip {
@@ -135,25 +135,35 @@ tooltip {
 }
 
 #custom-update {
-  font-size: 10px;
-  margin: 2px;
+  padding: 0 4px;
+  margin: 0 0 0 7.5px;
 }
 
-#idle_inhibitor, #custom-update #custom-screenrecording-indicator {
-margin: 0 5px;
+#custom-omarchy {
+  font-size: 15px;
+  margin: 0 0 0 4.5px;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.7);
+  
 }
 
-#clock, #idle_inhibitor {
-  margin-left: 8.75px;
+#custom-expand-icon {
+padding: 0px 2px;
+margin-left: 4px;
 }
 
 .hidden {
   opacity: 0;
 }
 
-#tray-expander {
-  margin-left: 5px;
+#custom-voxtype {
+  min-width: 12px;
+  margin: 0 0 0 2.5px;
 }
+
+#custom-voxtype.recording {
+  color: #a55555;
+}
+
 
 tooltip {
  padding: 4px;
@@ -170,12 +180,6 @@ tooltip label {
 }
 
 /* Specific animation Module */
-
-#custom-screenrecording-indicator {
-    font-size: 12px;
-    padding: 0px;
-    margin: 2px;
-}
 
 #custom-screenrecording-indicator {
   animation-timing-function: linear;
