--- a/config/V5/style.css
+++ b/config/V5/style.css
@@ -85,6 +85,7 @@ window#waybar.empty #window{
     transition: all 0.3s ease-in-out;
     opacity: 0.75;
     font-size: 8px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.75);
 }
 
 #workspaces button.active {
