Add padding to #custom-update element
Add custom padding for the update section.

--- a/config/V2.4/style.css
+++ b/config/V2.4/style.css
@@ -160,6 +160,11 @@ tooltip {
 
 /* Specific Module */
 
+#custom-update {
+  padding-left: 0px;
+  padding-right: 4px;
+}
+
 #group-tray-expander {
   border-radius: 24px;
   background-color: transparent;
