--- a/config/V2.8/style.css
+++ b/config/V2.8/style.css
@@ -121,6 +121,10 @@ tooltip {
 }
 
 /* Specific Module */
+#custom-update {
+  padding-left: 0px;
+  padding-right: 4px;
+}
 
 #tray > .passive {
     -gtk-icon-effect: dim;
