--- a/config/V6.e/style.css
+++ b/config/V6.e/style.css
@@ -90,6 +90,9 @@ margin: 0 5.5px;
 #power-profiles-daemon,
 #clock,
 #mpris,
+#custom-voxtype,
+#custom-voxtype.recording,
+#custom-voxtype.transcribing,
 #idle_inhibitor,
 #custom-updatespacman,
 #custom-update,
@@ -103,7 +106,14 @@ margin: 0 5.5px;
 tooltip {
   padding: 2px;
 }
+#custom-voxtype {
+  min-width: 12px;
+  margin: 0 0 0 2.5px;
+}
 
+#custom-voxtype.recording {
+  color: #a55555;
+}
 #idle_inhibitor {
   margin-left: 0;
   margin-right: 0;
