--- a/config/test/style.css
+++ b/config/test/style.css
@@ -36,20 +36,22 @@
 }
 
 .modules-right {
-  margin-right: 4px;
+  margin-right: -12px;
+
 }
 
 #right2 {
-  min-width: 250px;
+  min-width: 350px;
   margin-right: 0px;
   margin-left: 0px;
 }
 
 #clock {
-  min-width: 15px;
-  padding-left: 10px;
+  min-width: 50px;
+  padding-left: 0px;
   padding-right: 0px;
   margin-right: 0;
+  margin-left: 0;
 }
 
 
