--- a/config/test/style.css
+++ b/config/test/style.css
@@ -36,20 +36,21 @@
 }
 
 .modules-right {
-  margin: 0px 6px 0px 0px;
+  margin-right: 4px;
   min-width: 0;
 }
 
 #right2 {
-min-width: 100px;
-margin: 0px 0px 0px 90px;
+min-width: 250px;
+margin: 0px 0px 0px 0px;
 }
 
 #right1 {
-min-width: 250px;
+min-width: 150px;
 margin: 0px 0px 0px 0px;
 
 }
+
 
 #workspaces {
   padding: 0 0px;
@@ -233,8 +234,6 @@ tooltip label {
 }
 
 #mpris {
-padding-left: 50px;
-min-width: 250px;
 color: @foreground;
 animation: repeat;
 	animation-name: blink;
