--- a/config/test/style.css
+++ b/config/test/style.css
@@ -109,6 +109,7 @@
 }
 
 
+
 tooltip {
   padding: 2px;
 }
@@ -149,6 +150,18 @@ tooltip {
   opacity: 0.25;
   padding-left: 4px;
   padding-right: 4px;
+}
+
+#custom-separator2 {
+  opacity: 0.25;
+  padding-left: 21px;
+  padding-right: 6px;
+}
+
+#custom-separator3 {
+  opacity: 0.25;
+  padding-left: 2px;
+  padding-right: 6px;
 }
 
 tooltip {
