--- a/config/V2.3/style.css
+++ b/config/V2.3/style.css
@@ -42,9 +42,7 @@ tooltip {
   border: 1px solid alpha(@foreground, 0.3);
   margin: 0px 8px 3px 8px;
   background-color: @background;
-  box-shadow: 1px 1px 3px 1px #101010;
-  transition-property: background-color;
-  transition-duration: .5s;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
 }
 
 #left2{
@@ -52,9 +50,7 @@ tooltip {
   border: 1px solid alpha(@foreground, 0.3);
   margin: 0px 8px 3px 8px;
   background-color: @background;
-  box-shadow: 1px 1px 3px 1px #101010;
-  transition-property: background-color;
-  transition-duration: .5s;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
 }
 
 #left3{
@@ -68,25 +64,20 @@ tooltip {
   border: 1px solid alpha(@foreground, 0.3);
   margin: 0px 8px 3px 8px;
   background-color: @background;
-  box-shadow: 1px 1px 3px 1px #101010;
-  transition-property: background-color;
-  transition-duration: .5s;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
  }
 
 .modules-right {
-   border-radius: 26px;
+  border-radius: 26px;
   border: 1px solid alpha(@foreground, 0.3);
   margin: 0px 8px 3px 8px;
   background-color: @background;
-  box-shadow: 1px 1px 3px 1px #101010;
-  transition-property: background-color;
-  transition-duration: .5s;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
 }
 
 
 /* --- Workspaces --- */
 #workspaces {
- 
   border-radius: 24px;
   background-color: alpha(@background, 1);
   opacity: 0.95;
@@ -100,17 +91,16 @@ tooltip {
   border-radius: 24px;
   background-color: alpha(@foreground, 0.5);
   color: @background; 
-  transition: all 0.15s ease-in-out;
+  transition: all 0.2s ease-in-out;
   opacity: 0.95;
 }
 
 #workspaces button.active {
   color: @background;
-  padding: 0 20px;
+  min-width: 40px;
   background-color: alpha(@foreground, 0.9);
-  border-radius: 24px;
   opacity: 1.0;
-  transition: all 0.15s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 #workspaces button.empty {
@@ -118,16 +108,22 @@ tooltip {
   color: @foreground;
   opacity: 0.45;
   border-radius: 24px;
-  transition: all 0.15s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 #workspaces button.empty.active {
   background-color: alpha(@foreground, 0.9);
   color: @background;
   opacity: 1;
-
+  transition: all 0.2s ease-in-out;
 }
 
+#workspaces button.empty:hover,
+#workspaces button:hover {
+  background: @foreground;
+  color: @background;
+   opacity: 0.65;
+}
 
 /* --- General Modules --- */
 
@@ -151,7 +147,7 @@ tooltip {
 #custom-updatespacman {
   min-width: 14px;
   margin: 1px 3px 1px 3px;
-padding: 0 3px;
+  padding: 0 3px;
 }
 
 /* Specific Module */
@@ -160,6 +156,14 @@ padding: 0 3px;
   border-radius: 24px;
   background-color: transparent;
   color: @foreground;
+}
+
+#bluetooth {
+  padding-right: 0px;
+}
+
+#custom-weather {
+  padding-right: 0px;
 }
 
 #custom-update {
@@ -216,7 +220,7 @@ tooltip label {
   border: 2px solid alpha(@foreground, 0.3);
   margin: 0px 8px 3px 8px;
   background-color: @background;
-  box-shadow: 1px 1px 3px 1px #101010;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
   transition-property: background-color;
   transition-duration: .5s;
   animation: repeat;
