--- a/config/V6.ce/style.css
+++ b/config/V6.ce/style.css
@@ -8,7 +8,7 @@
   border: none;
   padding: 0px;
   min-height: 0;
-  font-family: 'JetBrainsMonoNL Nerd Font';
+  font-family: "JetBrains Mono Nerd Font";
   transition: background-color .3s ease-out;
   font-weight: 900;
   font-size: 11px;
@@ -168,13 +168,13 @@ tooltip {
 tooltip {
  padding: 4px;
  background: @background;
- font-size: 12px;
- border: 1px solid alpha(@foreground, 0.6);
+ font-size: 10px;
+ border: 1.5px solid alpha(@foreground, 0.6);
  border-radius: 8px;
  
 }
 tooltip label {
-    color: alpha(@foreground, 1);
+    color: alpha(@foreground, 0.65);
     font-weight: normal;
 }
 
