--- a/config/V6.ba/style.css
+++ b/config/V6.ba/style.css
@@ -97,6 +97,7 @@ margin-left: 4px;
 #memory,
 #mpris,
 #custom-expand-icon,
+#custom-expand-icon2,
 #tray,
 #cpu,
 #clock,
@@ -121,6 +122,7 @@ margin-left: 4px;
   font-weight: 600;
 }
 
+#custom-expand-icon2,
 #custom-expand-icon {
   margin-right: 0px;
   opacity: 0.5;
