style.css aktualisieren

--- a/config/V6.ba/style.css
+++ b/config/V6.ba/style.css
@@ -2,7 +2,7 @@
 
 * {
   /* background-color: @background; */
-  /* color: @foreground; */
+  color: @foreground;
 
   border: none;
   padding: 0px;
